manifests/demo.yml

apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: spinnaker-demo
  namespace: default
  labels:
    source: demo
    app: spinnaker
    serial: "1"
spec:
  replicas: 3
  selector:
    matchLabels:
      source: demo
      app: spinnaker
  template:
    metadata:
      labels:
        source: demo
        app: spinnaker
    spec:
      containers:
      - name: primary
        image: index.docker.io/lwander/spin-kub-v2-demo
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /
            port: 8000
---

kind: Service
apiVersion: v1
metadata:
  name: spinnaker-demo
  namespace: default
spec:
  selector:
    source: demo
    app: spinnaker-demo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spinnaker-demo
  labels:
    source: demo
    app: spinnaker
  annotations:
    kubernetes.io/ingress.class: primary
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: spinnaker-demo.us-1-west.mertslounge.ca
      http:
        paths:
          - path: /
            backend:
              serviceName: spinnaker-demo
              servicePort: 80
  tls:
   - secretName: spinnaker-demo-tls
     hosts:
       - spinnaker-demo.us-1-west.mertslounge.ca
